Docs: clarify commit message format and ADR creation rules
Commit messages now use PhaseId prefix (e.g. "1C2 - API: ...") and include
a thorough implementation summary in the body. ADR creation is now an
explicit instruction ("when you make a choice not in ARCHITECTURE.md, create
an ADR") rather than a passive suggestion ("non-obvious reasoning goes into
ADRs"). All three docs updated: ARCHITECTURE.md, backend/AGENTS.md,
frontend/AGENTS.md.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>